--- a/src/Components/LoginComponent/login.module.scss
+++ b/src/Components/LoginComponent/login.module.scss
@@ -2,7 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-
+padding: 10px;
 }
