--- a/src/Components/Table/table.module.scss
+++ b/src/Components/Table/table.module.scss
@@ -3,6 +3,11 @@
   max-width: 1181px;
   width: 100%;
 }
+
+.but {
+  width: 100px;
+  height: 40px;
+}
 .table {
   margin-top: 29px;
   width: 100%;
@@ -154,17 +159,25 @@
   color: #444A52;
 }
 .inputs {
-  margin-top: 36px;
+
+  width: 400px;
   display: flex;
   flex-direction: column;
+}
+
+.but {
+  margin-top: 10px;
 }
 
 .createBlock {
   margin-top: 20px;
   border-top: black solid 1px;
-  width: 100%;
+  padding: 20px;
+  width: min-content;
   display: flex;
   flex-direction: column;
+  border: 1px solid #231c1c;
+  border-radius: 20px;
   input {
     width: 300px;
     height: 30px;
