--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -1,3 +1,28 @@
+@font-face {
+  font-family: 'Golos Medium';
+  src: url('fonts/GolosText-Medium.eot');
+  src: url('fonts/GolosText-Medium.eot?#iefix') format('embedded-opentype'),
+  url('fonts/GolosText-Medium.woff') format('woff'),
+  url('fonts/GolosText-Medium.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Golos DemiBold';
+  src: url('./fonts/GolosText-DemiBold.eot');
+  src: url('./fonts/GolosText-DemiBold.eot?#iefix') format('embedded-opentype'),
+  url('./fonts/GolosText-DemiBold.woff') format('woff'),
+  url('./fonts/GolosText-DemiBold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Golos Medium';
+  margin: 0;
+  padding: 0;
+}
 .link {
   margin: 0 auto;
   border-radius: 4px;
