--- a/src/Components/HomePage/cert.module.scss
+++ b/src/Components/HomePage/cert.module.scss
@@ -53,9 +53,22 @@
   /* 1 */
 
   color: #1C1C1C;
-display: flex;
+  display: flex;
   justify-content: flex-end;
   margin-bottom: 65px;
+
+  &:hover {
+    color: #FFE924;
+  }
+}
+
+.certificate {
+  background-image: url("../../assets/Rectangle1166.svg");
+  display: flex;
+  justify-content: flex-start;
+  &__blackRec {
+    position: absolute;
+  }
 }
 
 .cer {
