--- a/src/Components/HomePage/content.module.scss
+++ b/src/Components/HomePage/content.module.scss
@@ -79,6 +79,7 @@
 .text {
   width: 870px;
   height: 40px;
+  font-family: 'Golos Text';
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
