--- a/src/Components/HomePage/directions.module.scss
+++ b/src/Components/HomePage/directions.module.scss
@@ -32,7 +32,7 @@
 }
 
 .text {
-  font-family: "Golos Medium";
+  font-family: 'Golos Text';
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
