--- a/src/Components/Courses/courses.module.scss
+++ b/src/Components/Courses/courses.module.scss
@@ -73,7 +73,7 @@
 
 .selectBlock {
   margin-top: 48px;
-  margin-bottom: 192px;
+  margin-bottom: 350px;
   display: flex;
   flex-direction: row;
   position: relative;
@@ -93,6 +93,7 @@
 }
 
 .square {
+  border-left: #1C1C1C 1px solid;
   margin-top: 31px;
   width: 30px;
   height: 30px;
@@ -101,7 +102,39 @@
 }
 
 .block{
-  height: 386px;
+  //height: 386px;
+  border: #1C1C1C 1px solid;
+  border-top: none;
+  &__textContainer {
+    margin-left: 21px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    p {
+      font-family: "Golos Text";
+      font-style: normal;
+      font-weight: normal;
+      font-size: 18px;
+      line-height: 46px;
+      /* or 253% */
+
+      display: flex;
+      align-items: center;
+      letter-spacing: -0.01em;
+      text-transform: uppercase;
+
+      /* 1 */
+
+      color: #1C1C1C;
+
+      margin: 0;
+      padding: 0;
+
+      &:hover {
+        color: #FFE924;
+      }
+    }
+  }
 
   /* 3 */
 
